--- a/Kotodama.vcxproj.filters
+++ b/Kotodama.vcxproj.filters
@@ -390,8 +390,12 @@
     <ClCompile Include="SourceCode\gamesystem\scene\PlaceManager.cpp">
       <Filter>gamesystem\editor</Filter>
     </ClCompile>
-    <ClCompile Include="SourceCode\gamesystem\text\Text.cpp" />
-    <ClCompile Include="SourceCode\gamesystem\Conversation\Conversation.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\Conversation\Conversation.cpp">
+      <Filter>gamesystem\ui</Filter>
+    </ClCompile>
+    <ClCompile Include="SourceCode\gamesystem\text\Text.cpp">
+      <Filter>gamesystem\ui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="resource.h" />
@@ -584,9 +588,6 @@
     <ClInclude Include="SourceCode\gamesystem\actor\FirstStageActor.h">
       <Filter>gamesystem\actor\First</Filter>
     </ClInclude>
-    <ClInclude Include="SourceCode\gamesystem\actor\GameOverSceneActor.h">
-      <Filter>gamesystem\actor\GameOver</Filter>
-    </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\actor\IntroductionSceneActor.h">
       <Filter>gamesystem\actor\base</Filter>
     </ClInclude>
@@ -743,17 +744,24 @@
     <ClInclude Include="SourceCode\gamesystem\ui\UI.h">
       <Filter>gamesystem\ui</Filter>
     </ClInclude>
-    <ClInclude Include="SourceCode\gamesystem\scene\PlaceManager.h">
-      <Filter>gamesystem\editor</Filter>
-    </ClInclude>
-    <ClInclude Include="SourceCode\gamesystem\text\Text.h" />
-    <ClInclude Include="SourceCode\gamesystem\Conversation\Conversation.h" />
     <ClInclude Include="resource.h">
       <Filter>SourceCords\shader</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\scene\PlaceManager.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\InterStamp.h">
       <Filter>gamesystem\bossattach\Stamp\Base</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\Conversation\Conversation.h">
+      <Filter>gamesystem\ui</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\actor\GameOverSceneActor.h">
+      <Filter>gamesystem\actor\GameOver</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\scene\PlaceManager.h">
+      <Filter>gamesystem\editor</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\text\Text.h">
+      <Filter>gamesystem\ui</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
