敵の管理クラスや2個目のステージのアクターを変更中

--- a/Kotodama.vcxproj.filters
+++ b/Kotodama.vcxproj.filters
@@ -668,9 +668,6 @@
     <ClInclude Include="SourceCode\gamesystem\scene\SecondStage.h">
       <Filter>gamesystem\scene\Play\Second</Filter>
     </ClInclude>
-    <ClInclude Include="SourceCode\gamesystem\actor\GameOverSceneActor.h">
-      <Filter>SourceCords\gamesystem\actor\GameOver</Filter>
-    </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\scene\TutorialScene.h">
       <Filter>gamesystem\scene\Tutorial</Filter>
     </ClInclude>
@@ -707,9 +704,6 @@
       <Filter>SourceCords\shader</Filter>
     </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\scene\PlaceManager.h" />
-    <ClInclude Include="SourceCode\gamesystem\bossattach\InterStamp.h">
-      <Filter>gamesystem\bossattach\Stamp\Base</Filter>
-    </ClInclude>
     <ClInclude Include="SourceCode\gamesystem\bossattach\AngerStamp.h">
       <Filter>gamesystem\bossattach\Stamp\Derived\Stamp</Filter>
     </ClInclude>
@@ -752,6 +746,10 @@
     <ClInclude Include="SourceCode\gamesystem\bossattach\InterStamp.h" />
     <ClInclude Include="SourceCode\gamesystem\actor\GameOverSceneActor.h">
       <Filter>gamesystem\actor\GameOver</Filter>
+    </ClInclude>
+    <ClInclude Include="SourceCode\gamesystem\actor\GameOverSceneActor.h" />
+    <ClInclude Include="SourceCode\gamesystem\bossattach\InterStamp.h">
+      <Filter>gamesystem\bossattach\Stamp\Base</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
