ボス登場シーンと撃破シーンの下準備、後はバグ直し

--- a/imgui.ini
+++ b/imgui.ini
@@ -116,10 +116,15 @@ Collapsed=0
 [Window][Attach]
 Pos=60,60
 Size=226,161
-Collapsed=0
+Collapsed=1
 
 [Window][SecondBoss]
 Pos=92,184
 Size=271,205
+Collapsed=0
+
+[Window][STATE]
+Pos=60,60
+Size=100,48
 Collapsed=0
 
