--- a/Kotodama.vcxproj.filters
+++ b/Kotodama.vcxproj.filters
@@ -409,6 +409,9 @@
     <ClInclude Include="SourceCode\engine\audio\Audio.h">
       <Filter>engine\audio</Filter>
     </ClInclude>
+    <ClInclude Include="SourceCode\engine\2d\Feed.h">
+      <Filter>engine\2d</Filter>
+    </ClInclude>
     <ClInclude Include="SourceCode\engine\2d\ImageManager.h">
       <Filter>engine\2d\Manager</Filter>
     </ClInclude>
@@ -756,9 +759,8 @@
     <ClInclude Include="SourceCode\gamesystem\text\TextManager.h">
       <Filter>gamesystem\Text</Filter>
     </ClInclude>
-    <ClInclude Include="SourceCode\engine\2d\Feed.h">
-      <Filter>engine\2d</Filter>
-    </ClInclude>
+    <ClInclude Include="SourceCode\engine\enginebase\resource.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\Basic.hlsli">
@@ -1042,5 +1044,11 @@
     <Filter Include="gamesystem\Text">
       <UniqueIdentifier>{6b589362-730f-4fb1-bae8-d3a3afeff414}</UniqueIdentifier>
     </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Kotodama.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resources\2d\objicon\Kotodama.ico" />
   </ItemGroup>
 </Project>
