--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -109,7 +109,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Heart.cpp" />
     <ClCompile Include="SourceCode\engine\2d\DebugText.cpp" />
     <ClCompile Include="SourceCode\engine\2d\Feed.cpp" />
     <ClCompile Include="SourceCode\engine\2d\Font.cpp" />
@@ -184,6 +183,7 @@
     <ClCompile Include="SourceCode\gamesystem\character\Food.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\Ghost.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\GhostBullet.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\character\Heart.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\HungerGauge.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\InterBoss.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\InterBullet.cpp" />
@@ -227,7 +227,6 @@
     <ClCompile Include="SourceCode\gamesystem\ui\UI.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Heart.h" />
     <ClInclude Include="SourceCode\engine\2d\DebugText.h" />
     <ClInclude Include="SourceCode\engine\2d\Feed.h" />
     <ClInclude Include="SourceCode\engine\2d\Font.h" />
@@ -309,6 +308,7 @@
     <ClInclude Include="SourceCode\gamesystem\character\Food.h" />
     <ClInclude Include="SourceCode\gamesystem\character\Ghost.h" />
     <ClInclude Include="SourceCode\gamesystem\character\GhostBullet.h" />
+    <ClInclude Include="SourceCode\gamesystem\character\Heart.h" />
     <ClInclude Include="SourceCode\gamesystem\character\HungerGauge.h" />
     <ClInclude Include="SourceCode\gamesystem\character\InterBoss.h" />
     <ClInclude Include="SourceCode\gamesystem\character\InterBullet.h" />
