--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -60,7 +60,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)DirectXTex;$(ProjectDir)SourceCode;$(ProjectDir)SourceCode\engine;$(ProjectDir)SourceCode\engine\3d;$(ProjectDir)SourceCode\engine\2d;$(ProjectDir)SourceCode\engine\audio;$(ProjectDir)SourceCode\engine\input;$(ProjectDir)SourceCode\engine\camera;$(ProjectDir)SourceCode\engine\enginebase;$(ProjectDir)SourceCode\engine\light;$(ProjectDir)SourceCode\engine\FpsManager;$(ProjectDir)SourceCode\engine\imgui;$(ProjectDir)SourceCode\engine\math;$(ProjectDir)SourceCode\engine\collision;$(ProjectDir)SourceCode\engine\ease;$(ProjectDir)SourceCode\gamesystem;$(ProjectDir)SourceCode\gamesystem\backobj;$(ProjectDir)SourceCode\gamesystem\boss;$(ProjectDir)SourceCode\gamesystem\editor;$(ProjectDir)SourceCode\gamesystem\enemy;$(ProjectDir)SourceCode\gamesystem\effect;$(ProjectDir)SourceCode\gamesystem\ParticleManager;$(ProjectDir)SourceCode\gamesystem\player;$(ProjectDir)SourceCode\gamesystem\scene;$(ProjectDir)SourceCode\gamesystem\ui;$(SolutionDir)DirectXTex\include;$(ProjectDir)SourceCode\gamesystem\gamecamera;$(ProjectDir)SourceCode\gamesystem\Common;$(ProjectDir)SourceCode\gamesystem\JsonObj;$(ProjectDir)SourceCode\engine\shake;$(ProjectDir)SourceCode\gamesystem\Process;$(ProjectDir)SourceCode\gamesystem\actor;$(ProjectDir)SourceCode\engine\helper;$(ProjectDir)SourceCode\gamesystem\character;$(DXTK12_DIR);$(ProjectDir)SourceCode\gamesystem\bossattach;$(ProjectDir)SourceCode\gamesystem\MessageWindow;$(ProjectDir)SourceCode\gamesystem\text;$(ProjectDir)SourceCode\gamesystem\Conversation</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)DirectXTex;$(ProjectDir)SourceCode;$(ProjectDir)SourceCode\engine;$(ProjectDir)SourceCode\engine\3d;$(ProjectDir)SourceCode\engine\2d;$(ProjectDir)SourceCode\engine\audio;$(ProjectDir)SourceCode\engine\input;$(ProjectDir)SourceCode\engine\camera;$(ProjectDir)SourceCode\engine\enginebase;$(ProjectDir)SourceCode\engine\light;$(ProjectDir)SourceCode\engine\FpsManager;$(ProjectDir)SourceCode\engine\imgui;$(ProjectDir)SourceCode\engine\math;$(ProjectDir)SourceCode\engine\collision;$(ProjectDir)SourceCode\engine\ease;$(ProjectDir)SourceCode\gamesystem;$(ProjectDir)SourceCode\gamesystem\backobj;$(ProjectDir)SourceCode\gamesystem\boss;$(ProjectDir)SourceCode\gamesystem\editor;$(ProjectDir)SourceCode\gamesystem\enemy;$(ProjectDir)SourceCode\gamesystem\effect;$(ProjectDir)SourceCode\gamesystem\ParticleManager;$(ProjectDir)SourceCode\gamesystem\player;$(ProjectDir)SourceCode\gamesystem\scene;$(ProjectDir)SourceCode\gamesystem\ui;$(SolutionDir)DirectXTex\include;$(ProjectDir)SourceCode\gamesystem\gamecamera;$(ProjectDir)SourceCode\gamesystem\Common;$(ProjectDir)SourceCode\gamesystem\JsonObj;$(ProjectDir)SourceCode\engine\shake;$(ProjectDir)SourceCode\gamesystem\Process;$(ProjectDir)SourceCode\gamesystem\actor;$(ProjectDir)SourceCode\engine\helper;$(ProjectDir)SourceCode\gamesystem\character;$(DXTK12_DIR);$(ProjectDir)SourceCode\gamesystem\bossattach;$(ProjectDir)SourceCode\gamesystem\MessageWindow;$(ProjectDir)SourceCode\gamesystem\text;$(ProjectDir)SourceCode\gamesystem\Conversation;$(ProjectDir)SourceCode\gamesystem\stageobj</AdditionalIncludeDirectories>
       <TreatWarningAsError>true</TreatWarningAsError>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -84,7 +84,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)DirectXTex;$(ProjectDir)SourceCode;$(ProjectDir)SourceCode\engine;$(ProjectDir)SourceCode\engine\3d;$(ProjectDir)SourceCode\engine\2d;$(ProjectDir)SourceCode\engine\audio;$(ProjectDir)SourceCode\engine\input;$(ProjectDir)SourceCode\engine\camera;$(ProjectDir)SourceCode\engine\enginebase;$(ProjectDir)SourceCode\engine\light;$(ProjectDir)SourceCode\engine\FpsManager;$(ProjectDir)SourceCode\engine\imgui;$(ProjectDir)SourceCode\engine\math;$(ProjectDir)SourceCode\engine\collision;$(ProjectDir)SourceCode\engine\ease;$(ProjectDir)SourceCode\gamesystem;$(ProjectDir)SourceCode\gamesystem\backobj;$(ProjectDir)SourceCode\gamesystem\boss;$(ProjectDir)SourceCode\gamesystem\editor;$(ProjectDir)SourceCode\gamesystem\enemy;$(ProjectDir)SourceCode\gamesystem\effect;$(ProjectDir)SourceCode\gamesystem\ParticleManager;$(ProjectDir)SourceCode\gamesystem\player;$(ProjectDir)SourceCode\gamesystem\scene;$(ProjectDir)SourceCode\gamesystem\ui;$(SolutionDir)DirectXTex\include;$(ProjectDir)SourceCode\gamesystem\gamecamera;$(ProjectDir)SourceCode\gamesystem\Common;$(ProjectDir)SourceCode\gamesystem\JsonObj;$(ProjectDir)SourceCode\engine\shake;$(ProjectDir)SourceCode\gamesystem\Process;$(ProjectDir)SourceCode\gamesystem\actor;$(ProjectDir)SourceCode\engine\helper;$(ProjectDir)SourceCode\gamesystem\character;$(DXTK12_DIR);$(ProjectDir)SourceCode\gamesystem\bossattach;$(ProjectDir)SourceCode\gamesystem\MessageWindow;$(ProjectDir)SourceCode\gamesystem\text;$(ProjectDir)SourceCode\gamesystem\Conversation</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)DirectXTex;$(ProjectDir)SourceCode;$(ProjectDir)SourceCode\engine;$(ProjectDir)SourceCode\engine\3d;$(ProjectDir)SourceCode\engine\2d;$(ProjectDir)SourceCode\engine\audio;$(ProjectDir)SourceCode\engine\input;$(ProjectDir)SourceCode\engine\camera;$(ProjectDir)SourceCode\engine\enginebase;$(ProjectDir)SourceCode\engine\light;$(ProjectDir)SourceCode\engine\FpsManager;$(ProjectDir)SourceCode\engine\imgui;$(ProjectDir)SourceCode\engine\math;$(ProjectDir)SourceCode\engine\collision;$(ProjectDir)SourceCode\engine\ease;$(ProjectDir)SourceCode\gamesystem;$(ProjectDir)SourceCode\gamesystem\backobj;$(ProjectDir)SourceCode\gamesystem\boss;$(ProjectDir)SourceCode\gamesystem\editor;$(ProjectDir)SourceCode\gamesystem\enemy;$(ProjectDir)SourceCode\gamesystem\effect;$(ProjectDir)SourceCode\gamesystem\ParticleManager;$(ProjectDir)SourceCode\gamesystem\player;$(ProjectDir)SourceCode\gamesystem\scene;$(ProjectDir)SourceCode\gamesystem\ui;$(SolutionDir)DirectXTex\include;$(ProjectDir)SourceCode\gamesystem\gamecamera;$(ProjectDir)SourceCode\gamesystem\Common;$(ProjectDir)SourceCode\gamesystem\JsonObj;$(ProjectDir)SourceCode\engine\shake;$(ProjectDir)SourceCode\gamesystem\Process;$(ProjectDir)SourceCode\gamesystem\actor;$(ProjectDir)SourceCode\engine\helper;$(ProjectDir)SourceCode\gamesystem\character;$(DXTK12_DIR);$(ProjectDir)SourceCode\gamesystem\bossattach;$(ProjectDir)SourceCode\gamesystem\MessageWindow;$(ProjectDir)SourceCode\gamesystem\text;$(ProjectDir)SourceCode\gamesystem\Conversation;$(ProjectDir)SourceCode\gamesystem\stageobj</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <TreatWarningAsError>true</TreatWarningAsError>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
@@ -177,23 +177,16 @@
     <ClCompile Include="SourceCode\gamesystem\bossattach\JoyStamp.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\Predict.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\ShockWave.cpp" />
-    <ClCompile Include="SourceCode\gamesystem\character\AttackBullet.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\EnemyManager.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\FirstBoss.cpp" />
-    <ClCompile Include="SourceCode\gamesystem\character\Food.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\Ghost.cpp" />
-    <ClCompile Include="SourceCode\gamesystem\character\GhostBullet.cpp" />
-    <ClCompile Include="SourceCode\gamesystem\character\Heart.cpp" />
-    <ClCompile Include="SourceCode\gamesystem\character\HungerGauge.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\InterBoss.cpp" />
-    <ClCompile Include="SourceCode\gamesystem\character\InterBullet.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\InterEnemy.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\NormalEnemy.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\Player.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\PlayerAttach.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\SecondBoss.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\TutorialEnemy.cpp" />
-    <ClCompile Include="SourceCode\gamesystem\character\ViewBullet.cpp" />
     <ClCompile Include="SourceCode\gamesystem\Conversation\Conversation.cpp" />
     <ClCompile Include="SourceCode\gamesystem\editor\Editor.cpp" />
     <ClCompile Include="SourceCode\gamesystem\editor\LoadBox.cpp" />
@@ -221,6 +214,13 @@
     <ClCompile Include="SourceCode\gamesystem\scene\SecondStage.cpp" />
     <ClCompile Include="SourceCode\gamesystem\scene\TitleScene.cpp" />
     <ClCompile Include="SourceCode\gamesystem\scene\TutorialScene.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\stageobj\AttackBullet.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\stageobj\Food.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\stageobj\GhostBullet.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\stageobj\Heart.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\stageobj\HungerGauge.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\stageobj\InterBullet.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\stageobj\ViewBullet.cpp" />
     <ClCompile Include="SourceCode\gamesystem\text\BossText.cpp" />
     <ClCompile Include="SourceCode\gamesystem\text\Text.cpp" />
     <ClCompile Include="SourceCode\gamesystem\text\TextManager.cpp" />
@@ -302,23 +302,16 @@
     <ClInclude Include="SourceCode\gamesystem\bossattach\JoyStamp.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\Predict.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\ShockWave.h" />
-    <ClInclude Include="SourceCode\gamesystem\character\AttackBullet.h" />
     <ClInclude Include="SourceCode\gamesystem\character\EnemyManager.h" />
     <ClInclude Include="SourceCode\gamesystem\character\FirstBoss.h" />
-    <ClInclude Include="SourceCode\gamesystem\character\Food.h" />
     <ClInclude Include="SourceCode\gamesystem\character\Ghost.h" />
-    <ClInclude Include="SourceCode\gamesystem\character\GhostBullet.h" />
-    <ClInclude Include="SourceCode\gamesystem\character\Heart.h" />
-    <ClInclude Include="SourceCode\gamesystem\character\HungerGauge.h" />
     <ClInclude Include="SourceCode\gamesystem\character\InterBoss.h" />
-    <ClInclude Include="SourceCode\gamesystem\character\InterBullet.h" />
     <ClInclude Include="SourceCode\gamesystem\character\InterEnemy.h" />
     <ClInclude Include="SourceCode\gamesystem\character\NormalEnemy.h" />
     <ClInclude Include="SourceCode\gamesystem\character\Player.h" />
     <ClInclude Include="SourceCode\gamesystem\character\PlayerAttach.h" />
     <ClInclude Include="SourceCode\gamesystem\character\SecondBoss.h" />
     <ClInclude Include="SourceCode\gamesystem\character\TutorialEnemy.h" />
-    <ClInclude Include="SourceCode\gamesystem\character\ViewBullet.h" />
     <ClInclude Include="SourceCode\gamesystem\Conversation\Conversation.h" />
     <ClInclude Include="SourceCode\gamesystem\editor\Editor.h" />
     <ClInclude Include="SourceCode\gamesystem\editor\LoadBox.h" />
@@ -346,6 +339,13 @@
     <ClInclude Include="SourceCode\gamesystem\scene\SecondStage.h" />
     <ClInclude Include="SourceCode\gamesystem\scene\TitleScene.h" />
     <ClInclude Include="SourceCode\gamesystem\scene\TutorialScene.h" />
+    <ClInclude Include="SourceCode\gamesystem\stageobj\AttackBullet.h" />
+    <ClInclude Include="SourceCode\gamesystem\stageobj\Food.h" />
+    <ClInclude Include="SourceCode\gamesystem\stageobj\GhostBullet.h" />
+    <ClInclude Include="SourceCode\gamesystem\stageobj\Heart.h" />
+    <ClInclude Include="SourceCode\gamesystem\stageobj\HungerGauge.h" />
+    <ClInclude Include="SourceCode\gamesystem\stageobj\InterBullet.h" />
+    <ClInclude Include="SourceCode\gamesystem\stageobj\ViewBullet.h" />
     <ClInclude Include="SourceCode\gamesystem\text\BossText.h" />
     <ClInclude Include="SourceCode\gamesystem\text\Text.h" />
     <ClInclude Include="SourceCode\gamesystem\text\TextManager.h" />
