ゴーストのバグ、2個目のステージBGM。ポストエフェクトの解除など

--- a/imgui.ini
+++ b/imgui.ini
@@ -75,7 +75,7 @@ Collapsed=1
 
 [Window][Ghost]
 Pos=0,3
-Size=47,191
+Size=161,293
 Collapsed=0
 
 [Window][b]
@@ -136,5 +136,10 @@ Collapsed=0
 [Window][FPS]
 Pos=60,60
 Size=107,48
+Collapsed=0
+
+[Window][Boss]
+Pos=966,252
+Size=114,82
 Collapsed=0
 
