衝撃波早め

--- a/imgui.ini
+++ b/imgui.ini
@@ -69,8 +69,8 @@ Size=70,224
 Collapsed=0
 
 [Window][Hunger]
-Pos=-69,526
-Size=281,32
+Pos=45,104
+Size=311,73
 Collapsed=0
 
 [Window][Ghost]
@@ -146,5 +146,10 @@ Collapsed=0
 [Window][Save]
 Pos=60,60
 Size=257,187
+Collapsed=0
+
+[Window][SECOND]
+Pos=60,60
+Size=208,141
 Collapsed=0
 
