--- a/imgui.ini
+++ b/imgui.ini
@@ -69,8 +69,8 @@ Size=70,224
 Collapsed=0
 
 [Window][Hunger]
-Pos=-69,526
-Size=281,32
+Pos=14,489
+Size=388,118
 Collapsed=0
 
 [Window][Ghost]
@@ -140,11 +140,16 @@ Collapsed=0
 
 [Window][Boss]
 Pos=966,252
-Size=114,82
+Size=146,96
 Collapsed=0
 
 [Window][Save]
 Pos=60,60
 Size=257,187
+Collapsed=0
+
+[Window][BOSS]
+Pos=60,60
+Size=206,102
 Collapsed=0
 
