--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="SourceCode\gamesystem\bossattach\AngerStamp.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\InterStamp.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\JoyStamp.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\bossattach\Note.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\Predict.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\ShockWave.cpp" />
     <ClCompile Include="SourceCode\gamesystem\character\EnemyManager.cpp" />
@@ -313,6 +314,7 @@
     <ClInclude Include="SourceCode\gamesystem\bossattach\AngerStamp.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\InterStamp.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\JoyStamp.h" />
+    <ClInclude Include="SourceCode\gamesystem\bossattach\Note.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\Predict.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\ShockWave.h" />
     <ClInclude Include="SourceCode\gamesystem\character\EnemyManager.h" />
