--- a/Kotodama.vcxproj
+++ b/Kotodama.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="SourceCode\gamesystem\actor\TutorialSceneActor.cpp" />
     <ClCompile Include="SourceCode\gamesystem\backobj\BackObj.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\AngerStamp.cpp" />
+    <ClCompile Include="SourceCode\gamesystem\bossattach\AttackNote.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\InterStamp.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\JoyStamp.cpp" />
     <ClCompile Include="SourceCode\gamesystem\bossattach\Note.cpp" />
@@ -312,6 +313,7 @@
     <ClInclude Include="SourceCode\gamesystem\actor\TutorialSceneActor.h" />
     <ClInclude Include="SourceCode\gamesystem\backobj\BackObj.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\AngerStamp.h" />
+    <ClInclude Include="SourceCode\gamesystem\bossattach\AttackNote.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\InterStamp.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\JoyStamp.h" />
     <ClInclude Include="SourceCode\gamesystem\bossattach\Note.h" />
