--- a/imgui.ini
+++ b/imgui.ini
@@ -56,7 +56,7 @@ Collapsed=0
 [Window][Player]
 Pos=47,227
 Size=134,221
-Collapsed=0
+Collapsed=1
 
 [Window][Bullet]
 Pos=328,465
@@ -71,7 +71,7 @@ Collapsed=0
 [Window][Hunger]
 Pos=14,489
 Size=388,118
-Collapsed=0
+Collapsed=1
 
 [Window][Ghost]
 Pos=0,3
@@ -159,7 +159,12 @@ Size=208,141
 Collapsed=0
 
 [Window][Fourth]
+Pos=176,128
+Size=160,155
+Collapsed=0
+
+[Window][Note]
 Pos=60,60
-Size=79,65
+Size=254,173
 Collapsed=0
 
