モデル切り替え

--- a/imgui.ini
+++ b/imgui.ini
@@ -175,6 +175,11 @@ Collapsed=0
 
 [Window][DamageArea]
 Pos=41,60
-Size=220,207
+Size=359,328
+Collapsed=0
+
+[Window][AREA]
+Pos=60,60
+Size=135,116
 Collapsed=0
 
